--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,8 +60,13 @@ footer p {
 
 .social-icons a {
     font-size: 1.5rem;               /* Default size of the icons */
-    color: #FFF;                     /* Default color for the icons */
+    color: #333;                     /* Default color for the icons */
+    margin-right: 15px;              /* Replace Bootstrap margin with custom margin */
     transition: color 0.3s ease, transform 0.3s ease; /* Smooth color and size transition */
+}
+
+.social-icons a:last-child {
+    margin-right: 0;                 /* Remove margin for the last icon */
 }
 
 .social-icons a:hover i {
